--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.1"
+  },
+  "@parcel/resolver-default": {
+    "packageExports": true
   },
   "browsersList": [
     "last 10 versions"
